[package]
name = "nu-isp-cli"
version = "0.7.1"
authors = ["Ein Terakawa <applause@elfmimi.jp>"]
edition = "2018"
description = "CLI tool for Nuvoton ISP_HID Bootloaders"
repository = "https://github.com/elfmimi/nu-isp-rs"
keywords = ["nuvoton", "isp", "hid", "flash"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies.nu-isp]
version = "0.7.1"
path = "../nu-isp"

[dependencies]
clap = "2.33.1"
log = { version = "0.4.8", features = ["std"] }
pretty_env_logger = "0.3.0"
termcolor = "1.1.0"
termcolor_output = "1.0.1"
atty = "0.2.5"
indicatif = "0.14.0"
hidapi = "1.2.1"
goblin = "0.2.0"
ihex = "1.1.2"
maplit = "1.0.2"
